# wasm-bindgen-file-reader-test

./: Cargo.toml  README.md  index.html  wasm_bindgen_file_reader_test.d.ts  wasm_bindgen_file_reader_test.js  wasm_bindgen_file_reader_test_bg.wasm  wasm_bindgen_file_reader_test_bg.wasm.d.ts
.github/workflows/: rust.yml
ci/: build_demo.sh  install_wasm_bindgen.sh
src/: lib.rs
static/: index.html  worker.js
