[package]
name = "wasm-bindgen-file-reader-test"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
js-sys = "0.3.57"
log = { version = "0.4.14", features = ["std"] }
sha2 = "0.10.2"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
wasm-bindgen-file-reader = "1"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.57", features = ["Blob", "File", "FileReaderSync"] }
